--- a/02_Counter/index.html
+++ b/02_Counter/index.html
@@ -19,7 +19,12 @@
   const App = () => {
     const [counter, setCounter] = React.useState(0);
     const countUp = () => {
-      setCounter(counter + 1);
+      /**
+       * setCounter의 인자로 함수를 넘겨줄 수 있다.
+       * 순수함수로 구성하여 더 안전하게 만들 수 있는 아래 방법을 권장한다.
+       */
+      // setCounter(counter + 1);
+      setCounter(current => current + 1);
     };
 
     return (
