Update 04. Unit Converter (Separate Component)

--- a/04_Unit_Converter/index.html
+++ b/04_Unit_Converter/index.html
@@ -16,40 +16,62 @@
 <!-- In addition to the React and ReactDOM we need babel to transpile the JSX to JavaScript code. -->
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
-  const App = () => {
+  const MinutesToHours = () => {
     const [amount, setAmount] = React.useState(0);
-    const [flipped, setFlipped] = React.useState(false);
+    const [inverted, setInverted] = React.useState(false);
 
     const onChange = (e) => setAmount(e.target.value);
     const reset = () => setAmount(0);
-    const onFlip = () => {
+    const onInverted = () => {
       reset();
-      setFlipped(current => !current);
+      setInverted(current => !current);
     };
 
     return (
       <div>
-        <h1>Unit Converter</h1>
         <label htmlFor="minutes">Minutes</label>
         <input
           id="minutes"
-          value={flipped ? amount * 60 : amount}
+          value={inverted ? amount * 60 : amount}
           placeholder="Minutes"
           type="number"
-          disabled={flipped}
+          disabled={inverted}
           onChange={onChange} />
 
         <label htmlFor="hours">Hours</label>
         <input
           id="hours"
-          value={flipped ? amount : Math.round(amount / 60)}
+          value={inverted ? amount : Math.round(amount / 60)}
           placeholder="Hours"
           type="number"
-          disabled={!flipped}
+          disabled={!inverted}
           onChange={onChange} />
 
         <button onClick={reset}>Reset</button>
-        <button onClick={onFlip}>Flipped</button>
+        <button onClick={onInverted}>{inverted ? 'Turn Back' : 'Invert'}</button>
+      </div>
+    );
+  };
+
+  const KmToMiles = () => {
+    return <h3>Km to Miles</h3>
+  };
+
+  const App = () => {
+    const [index, setIndex] = React.useState('0');
+    const onSelect = (e) => {
+      setIndex(e.target.value);
+    };
+
+    return (
+      <div>
+        <h1>Unit Converter</h1>
+        <select value={index} onChange={onSelect}>
+          <option value="0">Minutes & Hours</option>
+          <option value="1">Km & Miles</option>
+        </select>
+        {index === '0' && <MinutesToHours />}
+        {index === '1' && <KmToMiles />}
       </div>
     );
   };
